// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CustomTextInput password TextInput renders correctly 1`] = `
<View
  style={
    Array [
      Object {
        "borderRadius": 8,
        "justifyContent": "center",
        "paddingHorizontal": 6,
        "paddingVertical": 12,
      },
      Object {
        "backgroundColor": "#F0F0F0",
      },
    ]
  }
>
  <TextInput
    allowFontScaling={true}
    maxLength={30}
    onChangeText={[MockFunction]}
    placeholder="password"
    rejectResponderTermination={true}
    secureTextEntry={true}
    style={
      Object {
        "color": "#21325E",
      }
    }
    underlineColorAndroid="transparent"
    value=""
  />
</View>
`;

exports[`CustomTextInput username TextInput renders correctly 1`] = `
<View
  style={
    Array [
      Object {
        "borderRadius": 8,
        "justifyContent": "center",
        "paddingHorizontal": 6,
        "paddingVertical": 12,
      },
      Object {
        "backgroundColor": "#F0F0F0",
      },
    ]
  }
>
  <TextInput
    allowFontScaling={true}
    maxLength={30}
    onChangeText={[MockFunction]}
    placeholder="username"
    rejectResponderTermination={true}
    style={
      Object {
        "color": "#21325E",
      }
    }
    underlineColorAndroid="transparent"
    value=""
  />
</View>
`;
